--- a/.travis.yml
+++ b/.travis.yml
@@ -4,4 +4,4 @@ python:
 # command to install dependencies
 install: "pip install -r requirements.txt"
 # command to run tests
-script: export $PYTHONPATH=. && python -m pytest tests
+script: export PYTHONPATH=. && python -m pytest tests
